CR comment fixes